# mercadolibre_search

./: README.md  main.py  mercado_libre_alfa_romeo_159.csv  mercado_libre_audi_a4_3.2.csv  mercado_libre_audi_a6_3.0.csv  mercado_libre_audi_q5.csv  mercado_libre_bmw_serie_1.csv  mercado_libre_bmw_serie_3.csv  mercado_libre_bmw_serie_3_323.csv  mercado_libre_bmw_serie_3_325.csv  mercado_libre_bmw_x3_3.0.csv  mercado_libre_bmw_x5.csv  mercado_libre_glk_300.csv  mercado_libre_volvo_s60.csv  mercado_libre_volvo_xc90.csv  mock_server.py  pyproject.toml  seed_data.py  verify_tabs.py
