[project]
name = "mercadolibre-search"
version = "0.1.0"
description = "Scraper web en Python + Flask para consultar autos publicados en Mercado Libre Argentina"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "requests",
    "beautifulsoup4",
    "pandas",
    "pymongo",
    "python-dotenv",
]
